--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbz4IPgmOrdwvP0p1XUri7zqTeuUc2jaxVtyTP8638s-LVjSGNqR5Beg3K9_QYGLuQTBfw/exec";
+    const AS_URL_BASE = "https://script.google.com/macros/a/~/AKfycbz4IPgmOrdwvP0p1XUri7zqTeuUc2jaxVtyTP8638s-LVjSGNqR5Beg3K9_QYGLuQTBfw/exec";
     
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);
