--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       body {
         background-color: #ebb81f;
         text-align: center;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        min-height: 100vh;
       }
       
       .lds-ring {
@@ -48,6 +52,7 @@
   </style>
 </head>
 <body>
+<img src="https://mrbono-app.pw/static/media/logo.24024abf.png" alt="mrbonolog" srcset="">
   <script>
     const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbxQnhw1OkBbS8DHUKXjbDehijmyspZPY7My2Dgdujf9YIyQmRhCNUPRB6ebIJgMp8u15Q/exec";
     
