--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>DynQRs</title>
   <style>
       body {
         background-color: #ebb81f;
@@ -50,9 +50,11 @@
 }
 
   </style>
+  <div> 
+    <img src="https://mrbono-app.pw/static/media/logo.24024abf.png" alt="mrbonolog" srcset=""> 
+  </div>
 </head>
 <body>
-<img src="https://mrbono-app.pw/static/media/logo.24024abf.png" alt="mrbonolog" srcset="">
   <script>
     const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbxQnhw1OkBbS8DHUKXjbDehijmyspZPY7My2Dgdujf9YIyQmRhCNUPRB6ebIJgMp8u15Q/exec";
     
