--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <title>DynQRs</title>
   <style>
-           body {
+    
+      body {
         background-color: #ebb81f;
-        display: flex;
+        text-align: center;
       }
     
           .cuerpo {
